drizzle orm and noen database setup

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "generate": "npx drizzle-kit generate",
+    "migrate": "npx  drizzle-kit migrate",
+    "studio": "npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/remix": "^4.4.6",
@@ -24,6 +27,7 @@
     "drizzle-orm": "^0.38.4",
     "isbot": "^4.1.0",
     "lucide-react": "^0.469.0",
+    "nanoid": "^5.0.9",
     "pnpm": "^9.15.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
